# hw_register_access

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  mkdocs.yml  readme.md
.devcontainer/: devcontainer.json
apps/: CMakeLists.txt
apps/hw_register_access_cmsdk_apb_uart_example/: CMakeLists.txt  readme.md
apps/hw_register_access_cmsdk_apb_uart_example/private/: cmsdk_apb_uart.hpp  main.cpp  qemu_debug_uart.cpp  qemu_debug_uart.hpp
apps/my_app/: CMakeLists.txt
apps/my_app/private/: main.cpp
docs/: buildDocumentation.sh  code_styling.md  debugging.md  doc_gen.md  edit_build.md  host_environment.md  index.md  project_definition.md  renderDocumentation.sh  static_analysis.md  unit_testing.md
docs/unlisted/: .pages  clang-tidy.md  lizard.md  mermaid.md  pclp.md  uncrustify.md
libs/: CMakeLists.txt
libs/bar/: CMakeLists.txt
libs/bar/private/: bar.cpp
libs/bar/public/bar/: bar_public.hpp
libs/bar/test/: CMakeLists.txt  test_bar.cpp
libs/foo/: CMakeLists.txt
libs/foo/private/: foo.cpp
libs/foo/public/foo/: foo_public.hpp
libs/foo/test/: CMakeLists.txt  bar_fake.cpp  test_foo.cpp
libs/hw_register_access/: CMakeLists.txt
libs/hw_register_access/public/hw_register_access/: hw_register_access.hpp
libs/hw_register_access/test/: CMakeLists.txt  test_hw_register_access.cpp
public/hw_register_access/: hw_register_access.hpp
tools/cmake/: cpp.cmake  gitversion.cmake  graphviz.cmake  lists.cmake  pclp.cmake  pclp_GNU.cmake  pclp_compiler_id.cmake  policy.cmake  preprocessor-defines.cmake  strings.cmake  target_properties.cmake  test.cmake
tools/cmake/toolchains/: gcc.cmake
tools/customProjUtils/createApp/: CMakeLists.txt.template  createApp.sh
tools/customProjUtils/createLib/: CMakeLists.txt.template  createLib.sh  lib_private.cpp.template  lib_private.hpp.template  lib_public.hpp.template  test.CMakeLists.txt.template  test.cpp.template
tools/customProjUtils/newLineAtEOF/: newLineAtEOF.sh
tools/doxygen/: doxygen.cfg
tools/lizard/: lizard_exclude.sh  lizard_report.sh  lizard_warn.sh  sample_lizard_report.html
tools/pclp/global_configuration/: global_libraries.lnt  global_options.lnt  google_cpp.lnt  std.lnt
tools/pclp/scripts/: ConvertPclpFindingsToJUnitXML.py  FindingToJUnitXML.py  LintFinding.py  ParsePclpOutput.py  analyze.sh  analyze_target.sh  cmake_configure_target.sh  configure.sh  generate_compiler_configuration_for_target.sh  generate_project_configuration_for_target.sh  get_targets_in_all.sh  pclp_configure_target.sh  schema.json  summarize_target_analysis.sh
